k8s-nginx-dashboard/client-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: client
          image: codesdebugger/service-frontend:v2
          ports:
          - containerPort: 80
