k8s-nginx-dashboard/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 3001
    targetPort: 80
