k8s-nginx-dashboard/mongo-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongo-db
  ports:
  - port: 27017
    targetPort: 27017
