k8s-nginx-dashboard/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 8000
    targetPort: 8000
